[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "numpysocket"
version = "9.9.9"
description = "Socket.Socket Subclass for Sending Numpy Arrays"
readme = "README.md"
authors = [
    {name = "Steven A. Bjornson", email = "info@sabjorn.net"}
]
license = {text = "MIT License"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = []

[project.urls]
Homepage = "https://github.com/sabjorn/numpysocket"


[dependency-groups]
dev = [
    "pre-commit",
    "pytest>=7.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
